<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="jp.gr.java_conf.foobar.remainder.MainViewModel" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context="jp.gr.java_conf.foobar.remainder.MainActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/element_spacing_small"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:title="@string/app_name"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/element_spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    style="@style/Card"
                    app:cardCornerRadius="@dimen/element_spacing_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/background_card"
                        android:padding="@dimen/element_spacing_normal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayout_memo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:theme="@style/AppTheme.Design.TextInputLayout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:id="@+id/edit_memo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:completionThreshold="1"
                                android:ems="10"
                                android:hint="@string/hint_memo"
                                android:inputType="text"
                                android:maxLength="50"
                                android:text="@={viewModel.textMemo}"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button_add"
                            style="@style/Button.Primary.TextWide"
                            android:layout_width="match_parent"
                            android:enabled="false"
                            android:onClick="@{viewModel::onClickAdd}"
                            android:text="@string/notification"
                            app:layout_constraintTop_toBottomOf="@id/textInputLayout_memo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/adView"
                    app:layout_constraintTop_toBottomOf="@id/cardView" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:adSize="BANNER"
                    app:adUnitId="hogehoge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                </com.google.android.gms.ads.AdView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/background"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"
            app:menu="@menu/menu_main" />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>
